# Embedded_Sys_CPP_Padova

./: Bank_Sys.cpp  Deque.cpp  Iterators.cpp  Queue.cpp  Sets.cpp  Vectors.cpp  first_prog  first_prog.cpp  pass_by_const_reference.cpp  pass_by_reference.cpp  pass_by_value.cpp  pass_by_value_vs_pass_by_reference.cpp  swap.cpp  task.cpp  token.txt
CPP_Functions/: ToBedebugged  ToBedebugged.cpp
Classes/: Classes.cpp  README.md
Classes/Date01/: Date.cpp  Date.h  main.cpp
Classes/Date02/: Date.cpp  Date.h  main.cpp
Classes/Date03/: Date.cpp  Date.h  main.cpp
Classes/Date04/: Date.cpp  Date.h  main.cpp
Classes/Date05/: Date.cpp  Date.h  main.cpp
Data_Structure_Iterators/: List.cpp  Maps.cpp  Stack.cpp
Final_CPP_Project/: .gitignore  2025_winter.txt  BUILD_INSTRUCTIONS.md  CMakeLists.txt  Concurrency_Overview.md  Concurrency_Scenarios.md  PROJECT_SUMMARY.md  README.md
Final_CPP_Project/docs/: project_summary.md
Final_CPP_Project/input/: bom.txt  orders.txt  orders_stress.txt  warehouse.txt
Final_CPP_Project/output/: kpi_report.txt  sim_log.txt
Final_CPP_Project/src/: AGV.cpp  AGV.h  AssemblyStation.cpp  AssemblyStation.h  ControlCenter.cpp  ControlCenter.h  FileHandler.cpp  FileHandler.h  Order.h  Product.h  Warehouse.cpp  Warehouse.h  main.cpp
Vectors_task/: Helper_Functions.cpp  Helper_Functions.h  task.cpp
